# nextrad-viewer

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
electron/: error.html  loading.html  package-lock.json  package.json
electron/icons/: icon.icns
electron/src/: main.ts  preload.ts  python-server.ts
nexrad_viewer/: __init__.py  server.py
nexrad_viewer/static/: app.js  index.html
